# EnterpriseSearch-BigQueryAI

./: .gitignore  README.md  pyproject.toml
agents/: main.py
agents/sec-filings/: __init__.py  agent.py
agents/sec-filings/prompts/: root_agent_prompt.py
app/: README.md  index.html  package-lock.json  package.json
app/src/: App.tsx
app/src/components/: ChatContainer.tsx  ChatInput.tsx  ChatMessage.tsx
app/src/services/: chatApi.ts
app/src/types/: chat.ts
assets/: Queryosity Killed the RAG.pptx
notebooks/: BQ-MCC-EXPLORATION.ipynb  ObjectRef.ipynb
notebooks/examples/: analyze_multimodal_data_bigquery.ipynb
src/ingestion/: README.md  contract_schema.py  extraction.py
